--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=qbank
 
 
 server.port=8090
-spring.data.mongodb.uri=mongodb+srv://dms-service:admin@dms-cluster.cshtf.mongodb.net/?retryWrites=true&w=majority&appName=dms-cluster
+spring.data.mongodb.uri=mongodb+srv://${SERVICE_NAME}:${PASSWORD}@dms-cluster.cshtf.mongodb.net/?retryWrites=true&w=majority&appName=dms-cluster
+#spring.data.mongodb.uri=mongodb+srv://$dms_service:admin@dms-cluster.cshtf.mongodb.net/?retryWrites=true&w=majority&appName=dms-cluster
 spring.data.mongodb.database=dmsdb
 
 
-spring.security.oauth2.client.registration.google.client-id=623735642772-r81tft1i58ecnm503kell0np34hdbvi2.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
