--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.data.mongodb.uri=mongodb+srv://${SERVICE_NAME}:${PASSWORD}@dms-cluster.cs
 spring.data.mongodb.database=dmsdb
 
 
-spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+#spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+#spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
